[gd_scene load_steps=10 format=3 uid="uid://dm1a6h5hldq75"]

[ext_resource type="LabelSettings" uid="uid://7nt2u5doodc3" path="res://assets/GM_32_Gray.tres" id="1_n64b8"]
[ext_resource type="Script" path="res://scenes/game_screen/game_screen.gd" id="1_w585g"]
[ext_resource type="PackedScene" uid="uid://duf3x54fvi1dy" path="res://scenes/memory_tile/memory_tile.tscn" id="2_5jevd"]
[ext_resource type="Texture2D" uid="uid://bw84wvumtmoa6" path="res://assets/ui/blue_button00.png" id="2_i40w3"]
[ext_resource type="Texture2D" uid="uid://ob0ekho8002k" path="res://assets/ui/yellow_button00.png" id="3_dcoxh"]
[ext_resource type="Texture2D" uid="uid://dft7dtq387ta0" path="res://assets/ui/green_button00.png" id="4_viivv"]
[ext_resource type="LabelSettings" uid="uid://dbrxxs60goc1p" path="res://assets/GM_32_White.tres" id="5_xcp1r"]
[ext_resource type="PackedScene" uid="uid://bd3yw1jvcnmkp" path="res://scenes/scorer/scorer.tscn" id="8_1me8h"]
[ext_resource type="PackedScene" uid="uid://mfp61u5u5k50" path="res://scenes/game_over/game_over.tscn" id="9_2253y"]

[node name="GameScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w585g")
memory_tile_scene = ExtResource("2_5jevd")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TileContainer" type="GridContainer" parent="HBoxContainer/PlayContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="DetailContainer" type="MarginContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_constants/margin_right = 18

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/DetailContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 12

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/DetailContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/DetailContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Moves:"
label_settings = ExtResource("1_n64b8")

[node name="MovesLabel" type="Label" parent="HBoxContainer/DetailContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "000"
label_settings = ExtResource("1_n64b8")

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/DetailContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/DetailContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Pairs:"
label_settings = ExtResource("1_n64b8")

[node name="PairsLabel" type="Label" parent="HBoxContainer/DetailContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "0/00"
label_settings = ExtResource("1_n64b8")

[node name="Spacer" type="Control" parent="HBoxContainer/DetailContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ExitButton" type="TextureButton" parent="HBoxContainer/DetailContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("2_i40w3")
texture_pressed = ExtResource("3_dcoxh")
texture_hover = ExtResource("4_viivv")

[node name="Label" type="Label" parent="HBoxContainer/DetailContainer/VBoxContainer/ExitButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Exit"
label_settings = ExtResource("5_xcp1r")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sound" type="AudioStreamPlayer" parent="."]

[node name="Scorer" parent="." instance=ExtResource("8_1me8h")]

[node name="GameOver" parent="." instance=ExtResource("9_2253y")]
visible = false
layout_mode = 1

[connection signal="pressed" from="HBoxContainer/DetailContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
